# rustobot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20251120000001_create_enums.down.sql  20251120000001_create_enums.up.sql  20251120000002_create_tables.down.sql  20251120000002_create_tables.up.sql
src/: config.rs  error.rs  main.rs
src/bot/: commands.rs  handlers.rs
src/domain/: mod.rs  models.rs  services.rs
src/infrastructure/: database.rs  repositories.rs
src/utils/: logger.rs
